--- a/backend/src/main/resources/application-dev.properties
+++ b/backend/src/main/resources/application-dev.properties
@@ -1,6 +1,6 @@
-datasource.database-init.url=jdbc:postgresql://localhost:5432/rental_system
-datasource.database-init.username=admin
-datasource.database-init.password=admin
+datasource.database-init.url=jdbc:postgresql://localhost:${DB_PORT}/${DB_NAME}
+datasource.database-init.username=${DB_INIT_USERNAME}
+datasource.database-init.password=${DB_INIT_PASSWORD}
 datasource.database-init.max-pool-size=1
-datasource.database-init.ddl-auto=create
+datasource.database-init.ddl-auto=create-drop
 datasource.database-init.init-data-script=init_data.sql
