AdminModuleDataSource was created. Simple method registerClient was implemented. RegisterClient doesn t send email yet only persist data. SwaggerUI was added.

--- a/backend/src/main/resources/application-dev.properties
+++ b/backend/src/main/resources/application-dev.properties
@@ -1,6 +1,12 @@
-datasource.database-init.url=jdbc:postgresql://localhost:${DB_PORT}/${DB_NAME}
+datasource.database.url=jdbc:postgresql://localhost:${DB_PORT}/${DB_NAME}
+
 datasource.database-init.username=${DB_INIT_USERNAME}
 datasource.database-init.password=${DB_INIT_PASSWORD}
 datasource.database-init.max-pool-size=1
 datasource.database-init.ddl-auto=create-drop
-datasource.database-init.init-data-script=init_data.sql
+datasource.database-init.init-data-script=init.sql
+
+datasource.account-module.username=${DB_ACCOUNT_MODULE_USERNAME}
+datasource.account-module.password=${DB_ACCOUNT_MODULE_PASSWORD}
+
+email.verification.token.life-time.minutes=1440
