Verify account using email verification token method was implemented, Reset password using reset password token method was implemented

--- a/backend/src/main/resources/application-dev.properties
+++ b/backend/src/main/resources/application-dev.properties
@@ -10,3 +10,4 @@ datasource.account-module.username=${DB_ACCOUNT_MODULE_USERNAME}
 datasource.account-module.password=${DB_ACCOUNT_MODULE_PASSWORD}
 
 email.verification.token.life-time.minutes=1440
+reset.password.token.life-time.minutes=15
