Unit test for AccountConverter was created. Unit tests for services were created. Integration tests for native queries were created.

--- a/backend/src/test/resources/application-test.properties
+++ b/backend/src/test/resources/application-test.properties
@@ -1,13 +1,13 @@
-datasource.database.url=jdbc:postgresql://localhost:${TEST_DB_PORT}/${TEST_DB_NAME}
+# datasource.database.url=jdbc:postgresql://localhost:${TEST_DB_PORT}/${TEST_DB_NAME}
 
-datasource.database-init.username=${TEST_DB_INIT_USERNAME}
-datasource.database-init.password=${TEST_DB_INIT_PASSWORD}
+datasource.database-init.username=admin
+datasource.database-init.password=admin
 datasource.database-init.max-pool-size=1
-datasource.database-init.ddl-auto=create-drop
-datasource.database-init.init-data-script=test-init.sql
+datasource.database-init.ddl-auto=create
+datasource.database-init.init-data-script=test_init.sql
 
-datasource.account-module.username=${TEST_DB_ACCOUNT_MODULE_USERNAME}
-datasource.account-module.password=${TEST_DB_ACCOUNT_MODULE_PASSWORD}
+datasource.account-module.username=accountmodule
+datasource.account-module.password=accountmodule
 
 email.verification.token.life-time.minutes=1440
 reset.password.token.life-time.minutes=15
