AuthenticationModuleDataSource was created. Spring Security dependency was added. Simple SecurityConfig was added (permitAll for all endpoints).

--- a/backend/src/main/resources/application-dev.properties
+++ b/backend/src/main/resources/application-dev.properties
@@ -5,9 +5,15 @@ datasource.database-init.password=${DB_INIT_PASSWORD}
 datasource.database-init.max-pool-size=1
 datasource.database-init.ddl-auto=create-drop
 datasource.database-init.init-data-script=init.sql
+datasource.database-init.show-sql=true
 
 datasource.account-module.username=${DB_ACCOUNT_MODULE_USERNAME}
 datasource.account-module.password=${DB_ACCOUNT_MODULE_PASSWORD}
+datasource.account-module.show-sql=true
+
+datasource.authentication-module.username=${DB_AUTHENTICATION_MODULE_USERNAME}
+datasource.authentication-module.password=${DB_AUTHENTICATION_MODULE_PASSWORD}
+datasource.authentication-module.show-sql=true
 
 email.verification.token.life-time.minutes=1440
 reset.password.token.life-time.minutes=15
