--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.application.name=roomie
 server.servlet.context-path=/api
 spring.profiles.active=dev
+logging.level.org.springframework.security=DEBUG
