--- a/backend/src/test/resources/application-test.properties
+++ b/backend/src/test/resources/application-test.properties
@@ -1,13 +1,17 @@
-# datasource.database.url=jdbc:postgresql://localhost:${TEST_DB_PORT}/${TEST_DB_NAME}
-
 datasource.database-init.username=admin
 datasource.database-init.password=admin
 datasource.database-init.max-pool-size=1
-datasource.database-init.ddl-auto=create
+datasource.database-init.ddl-auto=create-drop
 datasource.database-init.init-data-script=test_init.sql
+datasource.database-init.show-sql=true
 
 datasource.account-module.username=accountmodule
 datasource.account-module.password=accountmodule
+datasource.account-module.show-sql=true
+
+datasource.authentication-module.username=authenticationmodule
+datasource.authentication-module.password=authenticationmodule
+datasource.authentication-module.show-sql=true
 
 email.verification.token.life-time.minutes=1440
 reset.password.token.life-time.minutes=15
