Integration tests for findByEmail - AccountAuthenticationRepository (AccountAuthneticationModule) were implemented. AccountAuthenticationRepository (AccountAuthenticationModule) was created. Divertive query 'findByEmail' was added to AccountAuthenticationRepository.

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.application.name=roomie
 server.servlet.context-path=/api
 spring.profiles.active=dev
 logging.level.org.springframework.security=DEBUG
+logging.level.org.springframework.orm.jpa.JpaTransactionManager=DEBUG
